# pera-api

./: +37360361615.session  +40784112735.session  .gitignore  Dockerfile  README.md  celerybeat-schedule  commands.txt  docker-compose.yaml  pyproject.toml  some_phone.session
.github/workflows/: ci.yaml
docker/: celery.sh  flower.sh  pera_api.sh
pera_fastapi/: +40784112735.session  SendMessToChat.py  alembic.ini  config.py  database.py  main.py  models.py  models_copy.py  schemas.py  security.py  session-+40784112735.session  settings.py
pera_fastapi/auth/: auth.py  auth_router.py  base_config.py  database.py  db.py  manager.py  schemas.py  users.py  utils.py
pera_fastapi/migrations/: env.py
pera_fastapi/migrations/versions/: ad24a790768e_initialise.py  b2d0a9f0ad3d_reinitialise.py
pera_fastapi/models/: database.py  models.py  schemas.py
pera_fastapi/routes/: account_router.py  group_router.py  group_senders_router.py  history_routes.py  tasks_router.py
pera_fastapi/tasks/: +37360361615.session  +40784112735.session  SendMessToChat.py  SenderToGroups.py  connect_new_account.py  requests.py  router.py  taskSend.py  tasks.py
tests/: test_status.py
