[tool.poetry]
name = "pera-fastapi"
version = "0.1.0"
description = ""
authors = ["Ion Rusu <ionrusu114@ionrusu114.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.0.3"
telethon = "^1.32.0"
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.1"
mypy = "^1.6.1"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
